feat(tp1): squelette 6 exercices + lanceur App
Structure initiale du TP1 avant écriture des tests et du contenu
pédagogique du README.

- 6 sous-paquets fr.univ_amu.iut.exerciceN avec un stub Application
  chacun : PremiereFenetre, StagePersonnalise, PremiereScene,
  MiseEnPage, EvenementsBouton, Palette
- Chaque stub contient une javadoc qui décrit l'objectif + un bloc
  TODO qui guide l'étudiant (stratégie, ids attendus, etc.) sans
  donner le code à copier
- Exercice 5 : 3 fichiers (Compteur entièrement fourni,
  EcouteurClasseNommee stub, EvenementsBouton stub). Les 3 styles
  de handler sont montrés en commentaires dans EvenementsBouton.
- module-info.java exporte les 6 paquets + le paquet racine
- App.java transformé en lanceur : un VBox de 6 boutons qui chacun
  instancie l'exercice correspondant via Supplier et l'affiche dans
  un nouveau Stage. Un exercice non encore implémenté affiche un
  warning console sans planter le lanceur.
- AppTest recalibré sur le lanceur : vérifie que le label titre
  "TP1 — Bases JavaFX" est présent (#titre-tp1).

Vérifié : ./mvnw compile OK, ./mvnw test passe AppTest.