@@ -1,5 +1,7 @@
 package fr.univ_amu.iut;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
 import javafx.scene.control.Label;
 import javafx.stage.Stage;
 import org.junit.jupiter.api.Test;
@@ -8,24 +10,23 @@ import org.testfx.api.FxRobot;
 import org.testfx.framework.junit5.ApplicationExtension;
 import org.testfx.framework.junit5.Start;
 
-import static org.assertj.core.api.Assertions.assertThat;
-
 /**
- * Smoke test : vérifie que JavaFX rend bien la scène et que les
- * --add-opens nécessaires à TestFX (cf. pom.xml argLine) sont OK.
+ * Smoke test du lanceur : vérifie que JavaFX rend bien la scène de {@link App} et que le titre du
+ * lanceur est visible. Les tests spécifiques à chaque exercice sont dans les sous-paquets {@code
+ * exerciceN}.
  */
 @ExtendWith(ApplicationExtension.class)
 class AppTest {
 
-    @Start
-    void start(Stage stage) {
-        new App().start(stage);
-    }
+  @Start
+  void start(Stage stage) {
+    new App().start(stage);
+  }
 
-    @Test
-    void labelShouldBeDisplayed(FxRobot robot) {
-        Label label = robot.lookup("JavaFX fonctionne !").queryAs(Label.class);
-        assertThat(label).isNotNull();
-        assertThat(label.getText()).isEqualTo("JavaFX fonctionne !");
-    }
+  @Test
+  void leTitreDuLanceurEstAffiche(FxRobot robot) {
+    Label titre = robot.lookup("#titre-tp1").queryAs(Label.class);
+    assertThat(titre).isNotNull();
+    assertThat(titre.getText()).isEqualTo("TP1 — Bases JavaFX");
+  }
 }
